--- a/src/app/css/colors.css
+++ b/src/app/css/colors.css
@@ -1,13 +1,13 @@
 :root{
- --base-color:#352F49;
- --cardholder-color:#1A152C;
- --card-color:#1B162D;
+ --base-color:#0f0f0f;
+ --cardholder-color:#181A1B;
+ --card-color:#262626;
  --primary-heading-color:#8965F6;
- --border-color:#322f3b;
- --button1-color:#8966F8;
- --button2-color:#BF6AE3;
+ --border-color:#565656;
+ --button1-color:#2CBB5D;
+ --button2-color:#0f0f0f;
  --span-primary-color:rgb(230, 230, 230);
- --card-heading-color:#120D23;
+ --card-heading-color:#333333;
 }
 span{
  color:var(--span-primary-color);
